# ROS2-Course

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtlesim_control/share/turtlesim_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/add_two_ints/: CMakeLists.txt  package.xml
src/adding_integers/: setup.cfg  setup.py
src/adding_integers/adding_integers/: adding_client.py
src/complex_msg/: CMakeLists.txt  package.xml
src/complex_msg/msg/: Complex.msg
src/complex_talker_listener/: package.xml  setup.cfg  setup.py
src/complex_talker_listener/complex_talker_listener/: publisher.py
src/cougerbot/: package.xml  setup.cfg  setup.py
src/cougerbot/config/: controllers.yaml
src/cougerbot/launch/: cougerbot.launch.py  cougerbot_launch.xml  cougerbot_rviz_launch.xml
src/fibonacci_action_interface/: CMakeLists.txt
src/fibonacci_server_client/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_first_package/: package.xml  setup.py
src/my_first_robot/: setup.cfg  setup.py
src/my_first_robot/my_first_robot/: tortoise_bot_spawn_client.py
src/nav_goal_send/: package.xml  setup.cfg  setup.py
src/talker_listener/: setup.cfg  setup.py
src/teleopbot/: setup.cfg  setup.py
src/turtlebot3_basic/: package.xml  setup.cfg  setup.py
src/turtlesim_control/: setup.cfg  setup.py
src/word_count/: package.xml  setup.cfg  setup.py
src/word_count_msg/: CMakeLists.txt
(+254 files in other folders)
